# video-merger

./: .gitignore  CMakeLists.txt  README.md
include/: bad_file_access.h  constants.h  types.h  video_merger.h
src/: bad_file_access.cpp  main.cpp  video_merger.cpp
